fixed bookings overflow

--- a/app/assets/stylesheets/components/_bookings_page.scss
+++ b/app/assets/stylesheets/components/_bookings_page.scss
@@ -1,4 +1,5 @@
 .bookings-container {
   height: 100vh;
   padding:120px 60px;
+  overflow: auto;
 }
